TEST_PROGRAMS/VALID/08/complexExpression.go
package main;
func inc (toInc int) int {
    toInc++;
    return toInc;
}
func main(){
    var z bool = true;
    var x []bool;
    x = append(x, (inc(^+-int(!!!z)) + 2 &^ ( 1 ) ^ 15) == 12);
}
